# rrmp

./: .gitignore  README.md  alembic.ini  pyproject.toml  rrmp.db  run.py
alembic/: env.py
alembic/versions/: 5be7746bdc53_initial_tables.py
backend/: README.md  db.py  main.py
backend/models/: __init__.py  folder.py  playlist.py  playlist_track.py  recently_played.py  track.py
backend/routers/: library.py  metadata.py  player.py  playlists.py
backend/schemas/: folder.py  player.py  playlist.py  track.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: FolderManager.vue  Library.vue  NowPlaying.vue  PlayerControls.vue  Playlist.vue  Queue.vue  Toast.vue
frontend/src/services/: api.js
frontend/src/stores/: library.js  player.js  theme.js
frontend/src/utils/: toast.js
